--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,10 +19,12 @@
     <string name="wrong">Wrong</string>
     <string name="play_again">Play Again</string>
     <string name="you_scored">You Scored</string>
-    <string name="title_text">guess the word!</string>
+    <string name="title_text">Gues The Word!</string>
     <string name="play_button">Play</string>
     <string name="get_ready">Get ready to</string>
     <string name="correct">Correct</string>
     <string name="end_game">End game</string>
     <string name="word_is">The word is…</string>
+    <string name="quote_format">\"%s\"</string>
+    <string name="score_format">CurrentScore: %d</string>
 </resources>
